--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.treelzebub.piholder">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".PiHolderApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/PiHolder">
 
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.PiHoleAdminActivity" />
+        <activity android:name=".activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activity.PiHoleAdminActivity"
+            android:theme="@style/PiHolder.NoActionBar" />
+
     </application>
 
 </manifest>
