--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,24 @@
 buildscript {
-    ext.kotlin_version = '1.0.6'
+    ext {
+        kotlin_version = '1.0.6'
+        support_version = '25.1.1'
+    }
+
     repositories {
         jcenter()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
