--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     }
 
     repositories {
+
         jcenter()
     }
 
@@ -19,6 +20,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url 'https://github.com/asarazan/maven-repository/raw/master/' }
     }
 }
 
