--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,20 @@
 buildscript {
     ext {
-        kotlin_version = '1.0.6'
-        support_version = '25.1.1'
+        kotlin_version = '1.1.3-2'
+        gradle_version = '3.0.0-alpha7'
+        support_version = '26.0.0'
+        build_tools = '26.0.0'
+        min_sdk = 15
+        target_sdk = 26
     }
 
     repositories {
-
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
@@ -19,6 +23,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         maven { url "https://jitpack.io" }
         maven { url 'https://github.com/asarazan/maven-repository/raw/master/' }
     }
