--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,11 @@ buildscript {
     repositories {
         jcenter()
         google()
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
+        classpath 'io.fabric.tools:gradle:1.22.1'
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
