--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         applicationId "net.treelzebub.piholder"
         minSdkVersion min_sdk
         targetSdkVersion target_sdk
-        versionCode 1
+        versionCode 10000001
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
