--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
     ext {
         kotlin_version = '1.1.3-2'
-        gradle_version = '3.0.0-alpha7'
+        gradle_version = '3.0.0-alpha8'
         support_version = '26.0.0'
         build_tools = '26.0.0'
         min_sdk = 15
-        target_sdk = 26
+        compile_sdk = 26
+        target_sdk = compile_sdk
     }
 
     repositories {
